# cpp-pratical-training

./: .gitignore  README.md
project1/: CMakeLists.txt  backgroundwidget.cpp  main.cpp  mainmenu.cpp  mainmenu.h  musicmanager.cpp  musicmanager.h  resources.qrc
untitled/: backgroundwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  musicmanager.cpp  musicmanager.h  resources.qrc  savemanager.cpp  savemanager.h  saveselectiondialog.cpp  saveselectiondialog.h  setting.cpp  setting.h  untitled.pro
untitled/music/bgm/: taqing.pkf
剧本/: 省流版.txt  章目安排.txt
实训要求/: 2024级实训计划及要求.docx  最强大脑赛题.docx  附件 开题报告.doc
